jinterface: Fix java compiler warning
by avoiding deprecated Double(double) constructor.